fixed the navbar overlapping issue

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,6 +12,8 @@
   padding: 18px;
   margin-bottom: 32px;
 
+  z-index: 2;
+
   a {
 
     color: black;
